--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/swisscat_robot
+script_dir=$base/lib/mob_rob_loca
 [install]
-install-scripts=$base/lib/swisscat_robot
+install_scripts=$base/lib/mob_rob_loca
