everything is now swisscat_simulation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/mob_rob_loca
+script_dir=$base/lib/swisscat_simulation
 [install]
-install_scripts=$base/lib/mob_rob_loca
+install_scripts=$base/lib/swisscat_simulation
