--- a/params/ekf_em.yaml
+++ b/params/ekf_em.yaml
@@ -79,6 +79,10 @@ ekf_filter_node_odom:
                                       0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    1e-9,  0.0,     0.0,     0.0,    0.0,    0.0,
                                       0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,     1e-9,  0.0,     0.0,    0.0,    0.0,
                                       0.0,    0.0,    0.0,    0.0,    00.0,    0.0,    0.0,    0.0,    0.0,    0.0,     0.0,     0.0,     0.0,    0.0,    1e-9]
+/**:
+    ros__parameters:
+        use_sim_time : True
+
 ekf_filter_node_map:
     ros__parameters:
         frequency: 20.0
